# taint-analysis

./: CMakeLists.txt  README.md
taint-analysis/: CMakeLists.txt  llvm_utils.cpp  llvm_utils.h  main.cpp  pch.h  taint_visitor.cpp  taint_visitor.h  ver.h
taint-analysis/k-alias-analysis/: kaa.cpp  kaa.h
test/optee/: sample_syscalls.txt  syscalls.txt
